Fix scrollbar offset and add animations

--- a/src/App.css
+++ b/src/App.css
@@ -240,16 +240,6 @@ footer p {
   display: block;
 }
 
-.Display select {
-  width: 80%;
-  font-family: 'Sofia Sans', 'Sofia-Sans', sans-serif;
-  font-size: 1rem;
-  padding: 5px;
-  border-radius: var(--border-radius-L);
-  border: 2px solid var(--pale-green);
-  background-color: white;
-}
-
 .Display input {
   /* Remove iOS styling */
   -webkit-appearance: none;
@@ -290,6 +280,7 @@ footer p {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: background-color ease 0.2s;
 }
 
 .Display .delete:hover {
@@ -393,7 +384,6 @@ footer p {
   background-color: var(--pale-green);
 }
 
-
 /* Delete button X divs */
 
 .Display .delete .one,
@@ -402,6 +392,11 @@ footer p {
   height: 18px;
   border-radius: 3px;
   background-color: var(--main-color);
+}
+
+.Display .delete:hover .one,
+.Display .delete:hover .two {
+  width: 4px;
 }
 
 .one {
@@ -469,8 +464,25 @@ footer p {
   position: relative;
 }
 
-.search {
+input.search {
+  margin: 0;
   background-color: none;
+  cursor: text;
+  width: 220px;
+  border-radius: var(--border-radius-L);
+  transition: border-radius ease 0.3s;
+  z-index: 1;
+}
+
+.label-wrapper {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+}
+
+.label-wrapper label{
+  margin-right: 3px;
 }
 
 .arrow {
@@ -478,17 +490,16 @@ footer p {
   height: 0; 
   border-left: 8px solid transparent;
   border-right: 8px solid transparent;
-  /* Change to border-bottom to flip */
   border-top: 8px solid black;
-  border-radius: 4px;
+  border-radius: 2px;
   z-index: 1;
-  display: inline;
-  position: absolute;
-  right: 6%;
 }
 
 .dropdown-wrapper {
-  width: 100%;
+  margin: 0;
+  width: 220px;
+  overflow: hidden;
+  transform: translateY(-2px);
 }
 
 ul.dropdown {
@@ -496,40 +507,38 @@ ul.dropdown {
   margin: 0;
   padding: 0;
   overflow: auto;
+  display: block;
 }
 
 ul.dropdown li {
-  padding: 5px;
-  border: 1px solid var(--pale-green);
+  cursor: pointer;
+  margin: 0;
+  padding: 7px 5px;
+  border-bottom: 1px solid var(--pale-green);
 }
 
-ul.dropdown label{
+.dropdown-wrapper label{
   cursor: pointer;
 }
 
 input[type="radio"] {
   position: fixed;
   opacity: 0;
-  /* pointer-events: none; */
 }
 
 /* Scrollbar */
 ::-webkit-scrollbar {
   width: 10px;
-  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
-  border: 1px solid var(--mustard-yellow);
-  border-radius: 10px;
+  border: 1px solid var(--pale-green);
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--mustard-yellow); 
-  border-radius: 10px;
+  background: var(--pale-green); 
 }
 
 ::-webkit-scrollbar-thumb:hover {
   background: var(--light-brown); 
-  border-radius: 10px;
 }
